--- a/views/layout/includes/header-admin.pug
+++ b/views/layout/includes/header-admin.pug
@@ -1,7 +1,8 @@
 header.bg-indigo-600.p-4 
             div(class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center")
-                h1(class="text-2xl text-white font-extrabold text-center") Bienes
-                    span.font-normal Raíces
+                a(href="/")
+                    h1(class="text-2xl text-white font-extrabold text-center") Bienes
+                        span.font-normal Raíces
 
                 nav(class="my-5 text-sm flex  gap-3 items-center font-bold text-white") 
                     a(href="") Mis propiedades
