--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -15,7 +15,7 @@ block contenido
             p(class="font-bold text-gray-600 text-sm") Publicado por: 
                 span.font-normal= propiedad.usuario.nombre
 
-        div(class="mt-5 md:flex md:gap-4")
+        div(class="mt-5 md:flex md:gap-4 md:items-start")
             div(class="md:w-2/3 bg-white shadow rounded-lg")
                 img(class="rounded-lg" src=`/uploads/${propiedad.imagen}`, alt=`Imagen de ${propiedad.titulo}`)
                 div(class="px-5 py-10 space-y-5")
@@ -32,7 +32,7 @@ block contenido
                             span(class="text-gray-800 block text-lg")= propiedad.precio.nombre
 
 
-            div(class="md:w-1/3")
+            aside(class="md:w-1/3 bg-white shadow rounded-lg")
                 h3(class="text-center py-10 leading-6 text-xl font-bold text-gray-900") Ubicación
                 div(class="h-96" id="mapa")
                     p(id="lat" class="hidden")= propiedad.lat
@@ -40,7 +40,31 @@ block contenido
 
                 div(class="p-5")
                     p(class="text-gray-600 font-bold text-xs") Dirección
-                        span(id="calle" class="text-gray-800 block text-lg")= propiedad.calle 
+                        span(id="calle" class="text-gray-800 block text-lg")= propiedad.calle
+
+                    if !esVendedor
+                        h3(class="text-xl text-center my-10 font-extrabold text-gray-900") Vendedor
+                        if enviado
+                            p(class="p-2 text-center bg-green-100 text-green-600 uppercase font-bold") Mensaje enviado correctamente
+
+                        else if !usuario
+                            div(class="flex flex-col items-center justify-center gap-2 text-center")
+                                p Si deseas contactar el vendedor enviándole un mensaje, 
+                                a(class="text-indigo-600" href="/auth/login") debes iniciar sesión
+                        else
+                            if errores
+                                div(class="max-w-md mx-auto my-10")
+                                    each error in errores 
+                                        p(class="bg-red-500 text-white uppercase text-xs text-center p-2 mb-1 font-bold")= error.msg
+                                        
+                            form(method="POST")
+                                input(type="hidden" name="_csrf" value= csrfToken)
+
+                                div(class="space-y-5")
+                                    label(class="block" for="mensaje") Mensaje
+                                    textarea(class="h-38 resize-none w-full p-2 border border-gray-300 rounded-lg shadow placeholder-gray-400" id="mensaje" name="mensaje" placeholder="Escribe tu mensaje aquí")
+                                    input(class="bg-indigo-600 font-bold text-white uppercase text-sm w-full p-2 cursor-pointer" type="submit" value="Enviar mensaje") 
+
 
 block scripts
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
