--- a/views/auth/olvide.pug
+++ b/views/auth/olvide.pug
@@ -2,8 +2,9 @@ extends ../layout/index
 
 block contenido
     div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes
-            span.font-normal Raíces 
+        a(href="/") 
+            h1.text-4xl.my-10.font-extrabold.text-center Bienes
+                span.font-normal Raíces 
         h2.text-2xl.text-center.font-extrabold= pagina
 
         if errores
