--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -1,5 +1,8 @@
 extends ../layout/admin
 
+block styles 
+    meta(name="csrf-token" content= csrfToken)
+
 block contenido
     div.py-10
         h1.text-4xl.my-10.font-extrabold.text-center Bienes
@@ -32,9 +35,8 @@ block contenido
                                     a(class="text-sm text-gray-600" href=`/mensajes/${propiedad.id}`)= `${propiedad.mensajes.length} mensajes`  
 
                                 
-                                div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col gap-2 lg:flex-row")
-                                    form(action="#")
-                                        input(class=`${propiedad.publicada ? "bg-green-100 text-green-800" : "bg-yellow-100 text-yellow-800"} px-2 py-2 md:py-1 text-xs font-semibold leading-5 rounded cursor-pointer w-full` type="submit" value=`${propiedad.publicada ? "Publicada" : "No publicada"}`) 
+                                div(class="sm:w-1/4 md:w-2/6 lg:w-1/5 flex flex-col gap-2 2xl:flex-row")
+                                    button(class=`${propiedad.publicada ? "bg-green-100 text-green-800" : "bg-yellow-100 text-yellow-800"} cambiar-estado px-2 py-2 md:py-1 text-xs font-semibold leading-5 rounded cursor-pointer w-full` type="button" data-id-propiedad=`${propiedad.id}`)= `${propiedad.publicada ? "Publicada" : "No publicada"}` 
                                     
                                     a(class="px-2 py-2 md:py-1 text-xs font-semibold leading-5 rounded cursor-pointer bg-indigo-100 text-indigo-800 text-center" href=`/propiedades/editar/${propiedad.id}`)= "Editar"
 
@@ -62,3 +64,6 @@ block contenido
         
         else 
             p(class="text-center") No hay propiedades
+
+block scripts 
+    script(src="/js/cambiarEstado.js") 
