--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -4,10 +4,15 @@ header.bg-indigo-600.p-4
                     h1(class="text-2xl text-white font-extrabold text-center") Bienes
                         span.font-normal Raíces
 
-                //- TODO: Si esta logueado mostrar mis propiedades y cerrar sesion en los enlaces, eliminar console logs y pre
                 nav(class="my-5 text-sm flex  gap-3 items-center font-bold text-white") 
-                    a(href="/auth/registro") Crear cuenta
-                    a(href="/auth/login") Iniciar sesión
+                    if usuario
+                        a(href="/mis-propiedades") Mis propiedades
+                        form(action="/auth/cerrar-sesion" method="POST")
+                            input(type="hidden" name="_csrf" value= csrfToken) 
+                            input(class="bg-indigo-800 py-1.5 px-1.5 rounded-lg" type="submit" value="Cerrar sesión")
+                    else
+                        a(href="/auth/registro") Crear cuenta
+                        a(href="/auth/login") Iniciar sesión
 
 //- hidden lg:block
 div(class="bg-indigo-700 p-4") 
